Bug 178926 - shorcut alt F1 stops working after switching to classic menu style from kickoff and back
Summary: shorcut alt F1 stops working after switching to classic menu style from kicko...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-kickoff (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: triaged
: 178995 193782 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-12-27 22:46 UTC by jan sekal
Modified: 2009-05-23 18:27 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jan sekal 2008-12-27 22:46:09 UTC
Version:            (using KDE 4.1.0)
OS:                Linux
Installed from:    Fedora RPMs

install fedora 10 from dvd
log in as user into kde
switch from classic menu to kickoff
then switch to classic menu
Alt f1 shortcut stops working

subjective part begin
i will not be attaching mu subjective impressions, because kde maintainers dont like it (f***s and hells is over their limits)

please fix it

its really .... that kde maintainers are so ... at basic kde features
subjective part end
Comment 1 FiNeX 2008-12-28 16:01:34 UTC
Confirmed using r902024.
Comment 2 jan sekal 2008-12-29 11:22:10 UTC
in Mandriva 2009.0, Alt F1 works only as far as you do not switch to kickoff menu style. If you do so, then Alt F1 does not work any more (Mandriva 2009.0 ships with the classic KDE menu style, so there is no way how to access kickoff menu via a shortcut).
Comment 3 Dario Andres 2009-01-01 18:31:25 UTC
Here using:

Qt: 4.4.3 + qt-copy-patches-889120
KDE: 4.1.86 (KDE 4.1.86 (KDE 4.2 >= 20081221))
kdelibs svn rev. 904138 / kdebase svn rev. 904138
on ArchLinux x86_64 - Kernel 2.6.27.10

It seems like switch between different K menu styles forgets the keyboard shortcut, however in KDE4.2 you can set it again to Alt+F1 or whatever you want.
Comment 4 jan sekal 2009-01-01 20:21:30 UTC
upgrading to KDE 4.2 will take a little bit time, because I never install anything else than what comes with an installation iso, because I have very bad experiences with upgrading

by the way, in KDE 3.5.9 it was possible to define almost any shortcut for the start menu (except the win key) - why the ... it is not possible in KDE <4.2?
Comment 5 Dario Andres 2009-01-09 15:55:07 UTC
*** Bug 178995 has been marked as a duplicate of this bug. ***
Comment 6 Dario Andres 2009-04-25 16:00:07 UTC
Here using: 

Qt: 4.5.0 + qt-copy-patches-942255
KDE: 4.2.70 (KDE 4.2.70 (KDE 4.3 >= 20090415))
kdelibs svn rev. 958964 / kdebase svn rev. 958965
on ArchLinux i686 - Kernel 2.6.29.1

This is still an issue.
Comment 7 Dario Andres 2009-04-25 16:03:44 UTC
I guess this is caused because switchin from one style to another actually destroys and add a new applet, so all the configurations are lost + The applet is created with no default keyboard shortcut by default (to not interfere if you already have a launcher in your desktop).

So they should be two solutions to this, but I guess the "simple" one will be adding Alt+F1 by default if no other application launcher is present. The another one will be not deleting the widget itself.. (but do kind of switching). May be when changing to SimpleMenu, the configurations about the Kickoff one could be kept, and a reference added, so when you switchback from Simple to kickoff, it will use your previous Kickoff configuration instead of starting a new one.

Just my 2cents
Comment 8 Dario Andres 2009-04-25 17:12:17 UTC
SVN commit 959066 by darioandres:

Preserve global shortcut when switching menu-style Kickoff<->SimpleMenu
This is just a workaround (because all the settings are lost on the switch)

The real fix would be not destroying the current applet and creating a new one
on switch but changing its style internally

BUG: 178926


 M  +6 -1      applet/applet.cpp  
 M  +6 -1      simpleapplet/simpleapplet.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=959066
Comment 9 Dario Andres 2009-04-25 17:18:24 UTC
SVN commit 959069 by darioandres:

Backport to 4.2branch of:
SVN commit 959066 by darioandres:

Preserve global shortcut when switching menu-style Kickoff<->SimpleMenu
This is just a workaround (because all the settings are lost on the switch)

The real fix would be not destroying the current applet and creating a new one
on switch but changing its style internally

Part 1

CCBUG: 178926


 M  +6 -1      applet.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=959069
Comment 10 Dario Andres 2009-04-25 17:28:40 UTC
SVN commit 959074 by darioandres:

Backport to 4.2branch of:
SVN commit 959066 by darioandres:

Preserve global shortcut when switching menu-style Kickoff<->SimpleMenu
This is just a workaround (because all the settings are lost on the switch)

The real fix would be not destroying the current applet and creating a new one
on switch but changing its style internally

Part 2

CCBUG: 178926



 M  +6 -1      simpleapplet.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=959074
Comment 11 Pino Toscano 2009-05-23 18:27:49 UTC
*** Bug 193782 has been marked as a duplicate of this bug. ***