Preserve global shortcut when switching menu-style Kickoff<->SimpleMenu This is just a workaround (because all the settings are lost on the switch)

The real fix would be not destroying the current applet and creating a new one
on switch but changing its style internally

BUG: 178926

svn path=/trunk/KDE/kdebase/workspace/; revision=959066